// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout|Table As CSS Grid 1`] = `
.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c4 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 16px;
  font-weight: 600;
  border: solid rgba(0,0,0,0.08);
  border-width: 1px 0;
  padding: 8px 24px;
  line-height: 1.5;
  background-color: #f6f8f9;
  white-space: nowrap;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
  font-weight: 700;
  color: #2f313a;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
    grid-template-columns: minmax(150px,1fr) max-content;
  }
}

<table
  className="c0  __asGrid"
>
  <thead
    className="c1"
  >
    <tr
      className="c2"
    >
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    className="c4"
  >
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 2.30
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout|Table Basic 1`] = `
.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c4 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 16px;
  font-weight: 600;
  border: solid rgba(0,0,0,0.08);
  border-width: 1px 0;
  padding: 8px 24px;
  line-height: 1.5;
  background-color: #f6f8f9;
  white-space: nowrap;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
  font-weight: 700;
  color: #2f313a;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
  }
}

<table
  className="c0  "
>
  <thead
    className="c1"
  >
    <tr
      className="c2"
    >
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    className="c4"
  >
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 2.30
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout|Table Extending Style 1`] = `
.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c4 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 16px;
  font-weight: 600;
  border: solid rgba(0,0,0,0.08);
  border-width: 1px 0;
  padding: 8px 24px;
  line-height: 1.5;
  background-color: #f6f8f9;
  white-space: nowrap;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
  color: tomato;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
  }
}

<table
  className="c0  "
>
  <thead
    className="c1"
  >
    <tr
      className="c2"
    >
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
    </tr>
  </thead>
  <tbody
    className="c4"
  >
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="Text-pfq5dp-0 c6"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 2.30
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Storyshots Layout|Table useTableMap Hook 1`] = `
.c0 {
  min-width: 100%;
  overflow-x: scroll;
  border: none;
  border-spacing: 0;
}

.__asGrid .c1 {
  display: contents;
}

.__asGrid .c4 {
  display: contents;
}

.__asGrid .c2 {
  display: contents;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: left;
  font-size: 16px;
  font-weight: 600;
  border: solid rgba(0,0,0,0.08);
  border-width: 1px 0;
  padding: 8px 24px;
  line-height: 1.5;
  background-color: #f6f8f9;
  white-space: nowrap;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: left;
  font-size: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-bottom: 1px solid rgba(0,0,0,0.08);
  padding: 16px 24px;
  line-height: 1.5;
}

@supports (display:contents) {
  .c0.__asGrid {
    display: grid;
  }
}

<table
  className="c0  "
>
  <thead
    className="c1"
  >
    <tr
      className="c2"
    >
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Fruit
      </th>
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      >
        Price
      </th>
      <th
        className="Text-pfq5dp-0 c3"
        fontSize={16}
        fontWeight="600"
        size={18}
        type="#2f313a"
      />
       
    </tr>
  </thead>
  <tbody
    className="c4"
  >
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Apple
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.50
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Banana
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 0.60
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Cherry
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        $ 9,999.99
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={false}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
    <tr
      className="c2"
    >
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        Coconut
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        N/A
      </td>
      <td
        className="Text-pfq5dp-0 c5"
        color="#59636f"
        fontSize={16}
        size={18}
        type="#59636f"
      >
        <button
          disabled={true}
          onClick={[Function]}
        >
          Add to cart
        </button>
      </td>
    </tr>
  </tbody>
</table>
`;
